# shape_of_good_behavior

./: .gitignore  EXPERIMENT_ISSUES.md  HANDOFF_IMPLICIT_BOUNDARIES.md  MODAL_EXPERIMENTS_CHEATSHEET.md  README.md  TODO.md  requirements.txt
apps/: reward_manifold_explorer.py
constitutional_alignment_geometry/: INITIAL_INQUIRY.md  README.md  TMLR_SUBMISSION_PLAN.md
constraint_geometry/: PAPER_OUTLINE.md  README.md  VENUE_TRACKER.md
data/: ablation_study.parquet  comparative_analysis.parquet  comparative_summary.csv  condorcet_benchmark.json  enhanced_gpo_black_holes.json  ethical_scenarios.parquet  ethical_scenarios_summary.csv
docs/: ALIGNMENT_GUARANTEES.md  CRITICAL_REVIEW.md  DECISION_PROBLEMS_PLAN.md  DETAILED_FEEDBACK_TAXONOMY.md  EVALUATOR_MODEL.md  EXAMPLE_FEEDBACK_QUESTIONS.md  EXPERIMENTAL_PLAN_V2.md  EXPERIMENT_REPORT.md  HANDOFF_SEMANTIC_RL.md  LEARNING_ROADMAP.md  METHODOLOGY_ANALYSIS.md  RESEARCH_PROPOSAL.md  RESEARCH_PROPOSUS_UPDATED.md  RISK_TOPOLOGY.md  ROBOTICS_SIMULATION_HANDOFF.md  SAMPLE_REWARD_SPECIFICATION.md  SEMANTIC_MANIFOLD_THEORY.md  SHEAF_GEOMETRIC_INTEGRATION.md  STORYTELLING_MACHINE.md  TENSOR_RL_FOUNDATIONS.md  THEORETICAL_IMPROVEMENTS.md  THEORETICAL_PROOFS.md  VISUAL_INTRODUCTION.md  intuition_synthesis.md
safety_gym_core/: Cargo.toml  README.md
safety_gym_core/examples/: demo.rs
safety_gym_core/src/: lib.rs
safety_gym_core/src/bindings/: c_api.rs  godot.rs  mod.rs
safety_gym_core/src/policy/: control.rs  gpo.rs  mod.rs  onnx.rs
safety_gym_core/src/topology/: continuous.rs  discrete.rs  mod.rs
scripts/: test_api.py  (+11 more)
(+383 files in other folders)
