[package]
name = "safety_gym_core"
version = "0.1.0"
edition = "2021"
authors = ["Mike Lee <mike@oasis-x.io>"]
description = "Rust core library for sheaf-theoretic safety in RL environments"
license = "MIT"
repository = "https://github.com/MikeHLee/ai_research"
keywords = ["reinforcement-learning", "safety", "topology", "godot"]
categories = ["game-development", "science", "simulation"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["onnx"]
onnx = ["ort"]
godot = ["godot-rust"]

[dependencies]
# Core math
ndarray = "0.16"
nalgebra = "0.33"

# ONNX Runtime for model inference
ort = { version = "2.0.0-rc.11", optional = true }

# Godot bindings
godot-rust = { package = "godot", version = "0.2", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Logging
log = "0.4"

# Random number generation (for embeddings)
rand = "0.8"
rand_distr = "0.4"

[dev-dependencies]
# Testing
pretty_assertions = "1.4"

[[example]]
name = "demo"
path = "examples/demo.rs"
